examples/ok/lower_min_ok.hax
module Demo;

pub sub foo() -> Void {
  return;
}
