examples/fail/return_type_mismatch.hax
module ZZZ::ReturnTypeMismatch;

sub main() -> Int {
  return true;
}
